--- a/package.json
+++ b/package.json
@@ -11,10 +11,21 @@
   },
   "dependencies": {
     "@nuxt/ui": "2.20.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
+    "bcrypt": "^5.1.1",
+    "better-sqlite3": "^11.7.0",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.15.0",
+    "pinia": "^2.3.0",
     "tailwindcss": "^3.4.17",
+    "uuid": "^11.0.3",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "ws": "^8.18.0"
   },
-  "packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321"
+  "packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321",
+  "devDependencies": {
+    "@pinia/nuxt": "^0.9.0"
+  }
 }
