--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "allchat",
   "private": true,
   "type": "module",
   "scripts": {
@@ -16,7 +16,7 @@
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.7.0",
     "jsonwebtoken": "^9.0.2",
-    "nuxt": "^3.15.0",
+    "nuxt": "^3.15.2",
     "pinia": "^2.3.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.0.3",
