Add user avatars

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 NUXT_JWT_SECRET="SECRET"
 NUXT_JWT_ALG="HS256"
+NUXT_PUBLIC_IMG_URL="https://example.com/"
+NUXT_IMG_UPLOAD_URL="https://upload.example.com/"
