--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ NUXT_JWT_SECRET="SECRET"
 NUXT_JWT_ALG="HS256"
 NUXT_PUBLIC_IMG_URL="https://example.com/"
 NUXT_IMG_UPLOAD_URL="https://upload.example.com/"
+NUXT_WORKER_SECRET="1234567890"
