--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.7.0",
     "jsonwebtoken": "^9.0.2",
-    "nuxt": "^3.15.2",
+    "nuxt": "^3.15.4",
     "pinia": "^2.3.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.0.3",
@@ -26,6 +26,8 @@
   },
   "packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321",
   "devDependencies": {
+    "@iconify-json/heroicons": "^1.2.2",
+    "@iconify-json/mdi": "^1.2.3",
     "@pinia/nuxt": "^0.9.0"
   }
 }
