--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/ui": "2.20.0",
+    "@nuxt/ui": "3.0.1",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.7.0",
     "jsonwebtoken": "^9.0.2",
-    "nuxt": "^3.15.4",
+    "nitropack": "^2.11.7",
+    "nuxt": "^3.16.1",
     "pinia": "^2.3.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.15",
     "uuid": "^11.0.3",
     "vue": "latest",
     "vue-router": "latest",
